--- a/src/Mycontent/Navigation/_nav.scss
+++ b/src/Mycontent/Navigation/_nav.scss
@@ -55,7 +55,7 @@
         // background-color: green;
 
         @include Tablet {
-            font-size: 3.5vw;
+            font-size: 3.4vw;
 
             &--esp {
                 font-size: 2.5vw;
